HTML for header area created

--- a/index.html
+++ b/index.html
@@ -57,3 +57,17 @@
       </div>
     </nav>
     <!-- Nav bar end -->
+    <!-- Header Start -->
+    <header>
+      <div id="home">
+        <div class="text-center div container-fluid">
+          <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">A H <span>Consultancy</span> Services</h1>
+              <p class="lead">Where <span>virtulisation</span> begins alongside <span>front end web development</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Heder end -->
