CSS updated for styles for main section

--- a/index.html
+++ b/index.html
@@ -70,4 +70,376 @@
         </div>
       </div>
     </header>
-    <!-- Heder end -->
+    <!-- Header end -->
+    <!-- Main Section Start-->
+    <main class="container">
+      <!-- About me Section Start -->
+      <div class=" p-4 spacer"></div>
+      <section id="aboutme" class="text-center">
+        <h2 class="display-3 mb-4">Ahm<span>ed Hu</span>ssain</h2>
+        <div class="spacer2"></div>
+        <div class="row">
+          <div class="col-md-8">
+            <p class="text-left">
+              An adaptable, broadly experienced, dedicated
+              Solution/Virtualization Architect, self-motivated, able to work
+              under pressure and to meet realistic schedules. Has experience of
+              design in both cross-platform and architecturally constrained
+              environments and project/line management of small teams, as well
+              as of working in consultancy/trouble-shooter roles
+            </p>
+            <div class="col-md-8">
+              <h4 class="h4 text-left mb-4 mt-4">Skills</h4>
+              <div class="table-responsive text-nowrap">
+                <table class="table table-striped">
+                    <thead>
+                        <tr class="text-left">
+                            <th>Skill</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-left">
+                        <tr>
+                            <th scope="row">General</th>
+                            <td>HTML-CSS</td>             
+                        </tr>
+                        <tr>
+                          <th scope="row">Languages</th>
+                          <td>JavaScript</td>             
+                      </tr>
+                      <tr>
+                        <th scope="row">FrameWorks</th>
+                        <td>Bootstrap-JQuery-React-Node-J</td>             
+                    </tr>
+                      </tbody>
+                  </table>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img
+              src="./images/BackgroundMeBlackWhite.jpg"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+            </div>
+        </div>
+        <!-- Card Deck Start -->
+        <div class="mt-5">
+          <div class="card-deck">
+            <div class="card">
+              <img
+                class="card-img-top img-thumbnail"
+                src="./images/Citrix-logo.png"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h3 class="card-title">
+                  Citrix Skills <i class="fa fa-desktop" aria-hidden="true"></i>
+                </h3>
+                <p class="card-text">
+                  Need consultancy in Citrix technolgies, click below
+                </p>
+                <button
+                  onclick="window.location.href='https://citrix.com';"
+                  type="button"
+                  class="btn btn-outline-success"
+                >
+                  Buy Me
+                </button>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                class="card-img-top img-thumbnail"
+                src="./images/microsoft.png"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h3 class="card-title">
+                  Microsoft Skills
+                  <i class="fa fa-desktop" aria-hidden="true"></i>
+                </h3>
+                <p class="card-text">
+                  Need consultancy in Microsoft technolgies, click below
+                </p>
+                <button
+                  onclick="window.location.href='https://Microsoft.com';"
+                  type="button"
+                  class="btn btn-outline-success"
+                >
+                  Buy Me
+                </button>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                class="card-img-top img-thumbnail"
+                src="./images/vmware.png"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h3 class="card-title">
+                  Vmware Skills <i class="fa fa-desktop" aria-hidden="true"></i>
+                </h3>
+                <p class="card-text">
+                  Need consultancy in Vmware technolgies, click below
+                </p>
+                <button
+                  onclick="window.location.href='https://vmware.com';"
+                  type="button"
+                  class="btn btn-outline-success"
+                >
+                  Buy Me
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Card deck end -->
+      </section>
+      <!-- About Me Section End -->
+      <!-- Portfolio Section Start -->
+      <div class="p-4 spacer"></div>
+      <section id="portfolio" class="text-center">
+        <h2 class="display-3 mb-4">Portfolio</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card">
+              <img
+                class="card-img-top img-thumbnail"
+                src="./images/p1a.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h3 class="card-title">
+                  PlaceHolder Project 1
+                  <i class="fa fa-desktop" aria-hidden="true"></i>
+                </h3>
+                <p class="card-text">
+                  When complete project 1 will be placed here where you will be
+                  see my talents in action.
+                </p>
+                <button
+                  onclick="window.location.href='https://google.com';"
+                  type="button"
+                  class="btn btn-outline-success"
+                >
+                  Go to
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img
+                class="card-img-top img-thumbnail"
+                src="./images/p8.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h3 class="card-title">
+                  PlaceHolder Project 2
+                  <i class="fa fa-desktop" aria-hidden="true"></i>
+                </h3>
+                <p class="card-text">
+                  When complete project 2 will be placed here where you will be
+                  see my talents in action.
+                </p>
+                <button
+                  onclick="window.location.href='https://google.com';"
+                  type="button"
+                  class="btn btn-outline-success"
+                >
+                  Go to
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img
+                class="card-img-top img-thumbnail"
+                src="./images/p2.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h3 class="card-title">
+                  PlaceHolder Project 3
+                  <i class="fa fa-desktop" aria-hidden="true"></i>
+                </h3>
+                <p class="card-text">
+                  When complete project 3 will be placed here where you will be
+                  see my talents in action.
+                </p>
+                <button
+                  onclick="window.location.href='https://google.com';"
+                  type="button"
+                  class="btn btn-outline-success"
+                >
+                  Go to
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col-md-4">
+            <div class="card">
+              <img
+                class="card-img-top img-thumbnail"
+                src="./images/p7.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h3 class="card-title">
+                  PlaceHolder Project 4
+                  <i class="fa fa-desktop" aria-hidden="true"></i>
+                </h3>
+                <p class="card-text">
+                  When complete project 4 will be placed here where you will be
+                  see my talents in action.
+                </p>
+                <button
+                  onclick="window.location.href='https://google.com';"
+                  type="button"
+                  class="btn btn-outline-success"
+                >
+                  Go to
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img
+                class="card-img-top img-thumbnail"
+                src="./images/p3.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h3 class="card-title">
+                  PlaceHolder Project 5
+                  <i class="fa fa-desktop" aria-hidden="true"></i>
+                </h3>
+                <p class="card-text">
+                  When complete project 5 will be placed here where you will be
+                  see my talents in action.
+                </p>
+                <button
+                  onclick="window.location.href='https://google.com';"
+                  type="button"
+                  class="btn btn-outline-success"
+                >
+                  Go to
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img
+                class="card-img-top img-thumbnail"
+                src="./images/p6.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h3 class="card-title">
+                  PlaceHolder Project 6
+                  <i class="fa fa-desktop" aria-hidden="true"></i>
+                </h3>
+                <p class="card-text">
+                  When complete project 6 will be placed here where you will be
+                  see my talents in action.
+                </p>
+                <button
+                  onclick="window.location.href='https://google.com';"
+                  type="button"
+                  class="btn btn-outline-success"
+                >
+                  Go to
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Portfolio Section End -->
+      <!-- Contact Section Start -->
+      <div class=" p-4 spacer"></div>
+      <section id="contact" class="text-center">
+        <h2 class="display-3 mb-4">Contact Me</h2>
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+            <h4 class="text-success text-center">Thank You</h4>
+            <form>
+              <div class="form-group input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"
+                    ><i class="fa fa-user" aria-hidden="true"></i
+                  ></span>
+                </div>
+                <input
+                  type="text"
+                  name="name"
+                  class="form-control"
+                  placeholder="Your Name"
+                />
+              </div>
+              <div class="form-group input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"
+                    ><i class="fa fa-envelope-open" aria-hidden="true"></i
+                  ></span>
+                </div>
+                <input
+                  type="text"
+                  name="email"
+                  class="form-control"
+                  placeholder="Your Email"
+                />
+              </div>
+              <div class="form-group input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"
+                    ><i class="fa fa-at" aria-hidden="true"></i
+                  ></span>
+                </div>
+                <input
+                  type="text"
+                  name="subject"
+                  class="form-control"
+                  placeholder="Subject"
+                />
+              </div>
+              <div class="form-group input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"
+                    ><i class="fa fa-comment" aria-hidden="true"></i
+                  ></span>
+                </div>
+                <textarea
+                  name="message"
+                  class="form-control"
+                  placeholder="Message"
+                  cols="30"
+                  rows="8"
+                ></textarea>
+              </div>
+              <div class="form-group">
+                <input
+                  type="submit"
+                  name="submit"
+                  class="btn btn-success btn-block"
+                  value="send"
+                />
+              </div>
+              <!-- Contact Section End -->
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- Main Section End -->
