--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body data-spy="scroll" data-target="#navscroll">
 
-    <!-- Nav bar Start -->
+    <!-- Nava bar Start -->
     <nav
       class="navbar navbar-expand-sm fixed-top navbar-dark bg-success"
       id="navscroll"
@@ -56,7 +56,8 @@
         </ul>
       </div>
     </nav>
-    <!-- Nav bar end -->
+    <!-- Nava bar end -->
+
     <!-- Header Start -->
     <header>
       <div id="home">
@@ -70,7 +71,7 @@
         </div>
       </div>
     </header>
-    <!-- Header end -->
+    <!-- Heder end -->
     <!-- Main Section Start-->
     <main class="container">
       <!-- About me Section Start -->
@@ -200,6 +201,7 @@
         <!-- Card deck end -->
       </section>
       <!-- About Me Section End -->
+
       <!-- Portfolio Section Start -->
       <div class="p-4 spacer"></div>
       <section id="portfolio" class="text-center">
@@ -367,6 +369,7 @@
         </div>
       </section>
       <!-- Portfolio Section End -->
+
       <!-- Contact Section Start -->
       <div class=" p-4 spacer"></div>
       <section id="contact" class="text-center">
@@ -443,3 +446,40 @@
       </section>
     </main>
     <!-- Main Section End -->
+    <!-- Footer Section Start -->
+    <footer class="page-footer font-small bg-success">
+      <!-- Footer Elements -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 py-5 text-center">
+        <div class="mb-5 flex-center">
+          <a class="ins-ic">
+            <button onclick="window.location.href='https://linkedin.com/in/ahmed-hussain-10a3477';"class="btn btn-primary btnlinkedin"><i class="fa fa-linkedin-square"></i></button>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="footer-copyright text-center py-3 text-white">© 2020 Copyright:
+    <a class="text-white" href="/"> aaminah.com </a>
+  </div>
+    </footer>
+    <!-- Footer Section End -->
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
