--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" >
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    >
 
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="./css/style.css" />
+    >
+    <link rel="stylesheet" href="./css/style.css" >
     <title>Ahmed Hussain</title>
   </head>
   <body data-spy="scroll" data-target="#navscroll">
-
     <!-- Nava bar Start -->
     <nav
       class="navbar navbar-expand-sm fixed-top navbar-dark bg-success"
@@ -32,7 +31,7 @@
         type="button"
         data-toggle="collapse"
         data-target="#nav1"
-        aria-controls="navbarTogglerDemo01"
+        aria-controls="nav1"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
@@ -52,7 +51,14 @@
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          <button onclick="window.location.href='https://linkedin.com/in/ahmed-hussain-10a3477';"class="btn btn-primary"><i class="fa fa-linkedin-square"></i></button>
+          <li>
+          <button
+            onclick="window.location.href='https:/linkedin.com/in/ahmed-hussain-10a3477';"
+            class="btn btn-primary"
+          >
+            <i class="fa fa-linkedin-square"></i>
+          </button>
+        </li>
         </ul>
       </div>
     </nav>
@@ -65,7 +71,10 @@
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">A H <span>Consultancy</span> Services</h1>
-              <p class="lead">Where <span>virtulisation</span> begins alongside <span>front end web development</span></p>
+              <p class="lead">
+                Where <span>virtulisation</span> begins alongside
+                <span>front end web development</span>
+              </p>
             </div>
           </div>
         </div>
@@ -75,7 +84,7 @@
     <!-- Main Section Start-->
     <main class="container">
       <!-- About me Section Start -->
-      <div class=" p-4 spacer"></div>
+      <div class="p-4 spacer"></div>
       <section id="aboutme" class="text-center">
         <h2 class="display-3 mb-4">Ahm<span>ed Hu</span>ssain</h2>
         <div class="spacer2"></div>
@@ -93,28 +102,28 @@
               <h4 class="h4 text-left mb-4 mt-4">Skills</h4>
               <div class="table-responsive text-nowrap">
                 <table class="table table-striped">
-                    <thead>
-                        <tr class="text-left">
-                            <th>Skill</th>
-                            <th>Description</th>
-                        </tr>
-                    </thead>
-                    <tbody class="text-left">
-                        <tr>
-                            <th scope="row">General</th>
-                            <td>HTML-CSS</td>             
-                        </tr>
-                        <tr>
-                          <th scope="row">Languages</th>
-                          <td>JavaScript</td>             
-                      </tr>
-                      <tr>
-                        <th scope="row">FrameWorks</th>
-                        <td>Bootstrap-JQuery-React-Node-J</td>             
+                  <thead>
+                    <tr class="text-left">
+                      <th>Skill</th>
+                      <th>Description</th>
                     </tr>
-                      </tbody>
-                  </table>
-                </div>
+                  </thead>
+                  <tbody class="text-left">
+                    <tr>
+                      <th scope="row">General</th>
+                      <td>HTML-CSS</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">Languages</th>
+                      <td>JavaScript</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">FrameWorks</th>
+                      <td>Bootstrap-JQuery-React-Node-J</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
           </div>
           <div class="col-md-4">
@@ -122,9 +131,8 @@
               src="./images/BackgroundMeBlackWhite.jpg"
               class="img-fluid"
               alt=""
-            />
+            >
           </div>
-            </div>
         </div>
         <!-- Card Deck Start -->
         <div class="mt-5">
@@ -134,7 +142,7 @@
                 class="card-img-top img-thumbnail"
                 src="./images/Citrix-logo.png"
                 alt="Card image cap"
-              />
+              >
               <div class="card-body">
                 <h3 class="card-title">
                   Citrix Skills <i class="fa fa-desktop" aria-hidden="true"></i>
@@ -156,7 +164,7 @@
                 class="card-img-top img-thumbnail"
                 src="./images/microsoft.png"
                 alt="Card image cap"
-              />
+              >
               <div class="card-body">
                 <h3 class="card-title">
                   Microsoft Skills
@@ -179,7 +187,7 @@
                 class="card-img-top img-thumbnail"
                 src="./images/vmware.png"
                 alt="Card image cap"
-              />
+              >
               <div class="card-body">
                 <h3 class="card-title">
                   Vmware Skills <i class="fa fa-desktop" aria-hidden="true"></i>
@@ -213,7 +221,7 @@
                 class="card-img-top img-thumbnail"
                 src="./images/p1a.jpg"
                 alt="Card image cap"
-              />
+              >
               <div class="card-body">
                 <h3 class="card-title">
                   PlaceHolder Project 1
@@ -239,7 +247,7 @@
                 class="card-img-top img-thumbnail"
                 src="./images/p8.jpg"
                 alt="Card image cap"
-              />
+              >
               <div class="card-body">
                 <h3 class="card-title">
                   PlaceHolder Project 2
@@ -265,7 +273,7 @@
                 class="card-img-top img-thumbnail"
                 src="./images/p2.jpg"
                 alt="Card image cap"
-              />
+              >
               <div class="card-body">
                 <h3 class="card-title">
                   PlaceHolder Project 3
@@ -294,7 +302,7 @@
                 class="card-img-top img-thumbnail"
                 src="./images/p7.jpg"
                 alt="Card image cap"
-              />
+              >
               <div class="card-body">
                 <h3 class="card-title">
                   PlaceHolder Project 4
@@ -320,7 +328,7 @@
                 class="card-img-top img-thumbnail"
                 src="./images/p3.jpg"
                 alt="Card image cap"
-              />
+              >
               <div class="card-body">
                 <h3 class="card-title">
                   PlaceHolder Project 5
@@ -346,7 +354,7 @@
                 class="card-img-top img-thumbnail"
                 src="./images/p6.jpg"
                 alt="Card image cap"
-              />
+              >
               <div class="card-body">
                 <h3 class="card-title">
                   PlaceHolder Project 6
@@ -371,7 +379,7 @@
       <!-- Portfolio Section End -->
 
       <!-- Contact Section Start -->
-      <div class=" p-4 spacer"></div>
+      <div class="p-4 spacer"></div>
       <section id="contact" class="text-center">
         <h2 class="display-3 mb-4">Contact Me</h2>
         <div class="row justify-content-center">
@@ -389,7 +397,7 @@
                   name="name"
                   class="form-control"
                   placeholder="Your Name"
-                />
+                >
               </div>
               <div class="form-group input-group">
                 <div class="input-group-prepend">
@@ -402,7 +410,7 @@
                   name="email"
                   class="form-control"
                   placeholder="Your Email"
-                />
+                >
               </div>
               <div class="form-group input-group">
                 <div class="input-group-prepend">
@@ -415,7 +423,7 @@
                   name="subject"
                   class="form-control"
                   placeholder="Subject"
-                />
+                >
               </div>
               <div class="form-group input-group">
                 <div class="input-group-prepend">
@@ -437,7 +445,7 @@
                   name="submit"
                   class="btn btn-success btn-block"
                   value="send"
-                />
+                >
               </div>
               <!-- Contact Section End -->
             </form>
@@ -449,21 +457,26 @@
     <!-- Footer Section Start -->
     <footer class="page-footer font-small bg-success">
       <!-- Footer Elements -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 py-5 text-center">
-        <div class="mb-5 flex-center">
-          <a class="ins-ic">
-            <button onclick="window.location.href='https://linkedin.com/in/ahmed-hussain-10a3477';"class="btn btn-primary btnlinkedin"><i class="fa fa-linkedin-square"></i></button>
-          </a>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 py-5 text-center">
+            <div class="mb-5 flex-center">
+              <!-- <a class="ins-ic"> -->
+                <button
+                  onclick="window.location.href='https:/linkedin.com/in/ahmed-hussain-10a3477';"
+                  class="btn btn-primary btnlinkedin"
+                >
+                  <i class="fa fa-linkedin-square"></i>
+                </button>
+              <!-- </a> -->
+            </div>
+          </div>
         </div>
       </div>
-
-    </div>
-  </div>
-  <div class="footer-copyright text-center py-3 text-white">© 2020 Copyright:
-    <a class="text-white" href="/"> aaminah.com </a>
-  </div>
+      <div class="footer-copyright text-center py-3 text-white">
+        © 2020 Copyright:
+        <a class="text-white" href="/"> aaminah.com </a>
+      </div>
     </footer>
     <!-- Footer Section End -->
     <script
